--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@fortawesome/angular-fontawesome": "^0.14.1",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "date-fns": "^2.28.0",
+    "font-awesome": "^4.7.0",
     "rxjs": "~7.8.0",
     "spotify-web-api-js": "^1.5.2",
     "tslib": "^2.3.0",
